--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "embla-carousel-react": "^8.3.0",
     "install": "^0.13.0",
     "lucide-react": "^0.441.0",
