--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.21.1",
     "country-state-city": "^3.2.1",
     "install": "^0.13.0",
+    "moment": "^2.30.1",
     "npm": "^10.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
