--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@supabase/supabase-js": "^2.45.4",
     "antd": "^5.21.1",
+    "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
     "install": "^0.13.0",
     "moment": "^2.30.1",
